--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "dateformat": "^5.0.3",
     "html-react-parser": "^3.0.4",
     "millify": "^5.0.0",
     "react": "^18.2.0",
